feat: Add comprehensive performance monitoring and Analysis Time tracking
- Add Analysis Time column to ROI Statistics dialog and CSV export
- Implement detailed performance logging to desktop performance.txt
- Track timing for each analysis step (vessel, nuclear, cytoplasm, features, classification)
- Monitor memory usage before/after each image analysis
- Identify ROI Manager operations as performance bottleneck (9-11s with 8000+ ROIs)
- Performance logging reveals gradual slowdown due to ROI accumulation